@@ -13,6 +13,7 @@ from pghoard.rohmu import compat
 from unittest.mock import Mock, patch
 import datetime
 import json
+import multiprocessing
 import os
 
 
@@ -202,7 +203,7 @@ dbname|"""
     def test_backup_state_file(self):
         self.pghoard.write_backup_state_to_json_file()
         state_path = self.config["json_state_file_path"]
-        thread_count = 5
+        thread_count = max(multiprocessing.cpu_count(), 5)
         with open(state_path, "r") as fp:
             state = json.load(fp)
         empty_state = {
