@@ -18,6 +18,8 @@ pghoard X.X.X (2016-XX-XX)
   to allow PGHoard to take its own basebackup.  This is sometimes required if
   a previous PGHoard process has been killed while it was taking a backup.
 * Support pghoard_restore --recovery-target-action with 9.3 and 9.4
+* Autotune compression.thread_count and transfer_agent.thread_count defaults
+  to be max(cpu_count, 5) instead of a default of 5 as before.
 * Miscellaneous bug fixes
 
 pghoard 1.4.0 (2016-07-22)
